# event-tracker

backend/: main.py  pyproject.toml  schema.prisma
frontend/: events.html  events_list.html  index.html  login.html  register.html
